# erddap-db-mcp

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  config.yml  docker-compose.yml  pyproject.toml  run_initial_sync.py  run_stdio.py  test_connection.py  test_tools.py
mcp_server/: data_store.py  prompts.py  schema.py  security.py  server.py
scheduler/: sync_scheduler.py
scripts/: deploy.sh  install_skills.sh
skills/: registry.py
skills/contracts/: erddap-chlorophyll-analysis.json  erddap-data-status.json  erddap-sst-analysis.json
skills/erddap-chlorophyll-analysis/: SKILL.md
skills/erddap-data-status/: SKILL.md
skills/erddap-sst-analysis/: SKILL.md
tools/: chlorophyll.py  data_access.py  sst.py  sync.py
