[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erddap-db-mcp"
version = "0.1.0"
description = "MCP server for chlorophyll and SST data from ERDDAP (NOAA CoastWatch)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "erddapy>=2.0.0",
    "xarray>=2024.0.0",
    "zarr>=2.18.0",
    "netCDF4>=1.6.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
erddap-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "tools", "scheduler"]
